--- a/Assets/Scripts/Root/Root.asmdef
+++ b/Assets/Scripts/Root/Root.asmdef
@@ -1,9 +1,9 @@
 {
-    "name": "Input",
+    "name": "Root",
     "rootNamespace": "",
     "references": [
-        "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:a3e99e06323f3c8458b67e0f2428bd10"
+        "GUID:91f6b97a8061c1245ab59072b5050b3f",
+        "GUID:2a8582cda2a162249b8dbd30d0d544c5"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
