--- a/Assets/Scripts/Grid/Grid.asmdef
+++ b/Assets/Scripts/Grid/Grid.asmdef
@@ -1,11 +1,9 @@
 {
-    "name": "Buildings",
+    "name": "Grid",
     "rootNamespace": "",
     "references": [
-        "GUID:4cbcfd4c9ec3a644cbeaf29ac3cb76a5",
-        "GUID:2a8582cda2a162249b8dbd30d0d544c5",
-        "GUID:755c9244eb788254586651126d1aa2a1",
-        "GUID:a3e99e06323f3c8458b67e0f2428bd10"
+        "GUID:91f6b97a8061c1245ab59072b5050b3f",
+        "GUID:4cbcfd4c9ec3a644cbeaf29ac3cb76a5"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
